istio/auth/disable-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: disable-mtls
  namespace: banking
spec:
  mtls:
    mode: DISABLE
